--- a/assets/style/global.css
+++ b/assets/style/global.css
@@ -4,13 +4,13 @@
 }
 
 body {
-  background-color: #e8e8e8;
+  background-color: whitesmoke;
 }
 
 .content {
   width: 100vw;
   height: 100vh;
-  padding: 1rem;
+  padding: 0;
   background-color: whitesmoke;
 }
 
