--- a/assets/style/pokedex.css
+++ b/assets/style/pokedex.css
@@ -137,8 +137,7 @@
   border-radius: 1rem;
   text-align: center;
   background-color: #999999;
-  width: 30%;
-  margin: 0 auto;
+  margin: 1rem auto 0;
 }
 
 .btn:hover {
@@ -146,21 +145,80 @@
   filter: opacity(0.8);
 }
 
-.stats {
-  width: 90vw;
-  height: 100vh;
+.statsSheet {
+  background: linear-gradient(white 41%, #303030 42%);
   z-index: 999;
-  font-size: 2rem;
+  font-size: 1.2rem;
   color: black;
-  background-color: whitesmoke;
-  position: absolute;
+  position: fixed;
+  margin: 0;
+  height: 100vh;
+  width: 100vw;
+  left: 0;
   top: 0;
-  left: 5vw;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: flex-start;
   flex-direction: column;
   text-decoration: none;
+  cursor: pointer;
+}
+
+.stats {
+  border-radius: 0.5rem;
+  max-width: 90%;
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-self: center;
+  background: linear-gradient(white 40%, #303030 41%);
+  color: white;
+  padding: 1rem;
+}
+
+.stats img {
+  width: 22rem;
+  align-self: center;
+  margin: 0.3rem 0 1rem;
+}
+
+.stats h2 {
+  color: black;
+}
+
+.stat {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.statBarTitle {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;
+  font-size: 1rem;
+}
+
+.statBar {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  height: 100%;
+  width: 70%;
+}
+
+.bar {
+  height: calc((100 / 7) * 1%);
+  width: calc(var(--width) * 0.67%);
+  background-color: --color;
+  max-width: calc(100% - 1rem);
+  border-radius: 1rem;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 3px;
 }
 
 .pagination {
@@ -193,6 +251,9 @@
   .pokemonGrid {
     grid-template-columns: 1fr 1fr 1fr;
     margin: 0;
+  }
+  .statsSheet {
+    background: #606060;
   }
 }
 
